--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "wrangler pages dev ./build/client",
     "typecheck": "tsc",
-    "typegen": "wrangler types"
+    "typegen": "wrangler types",
+    "generate": "drizzle-kit generate:sqlite",
+    "up": "drizzle-kit up:sqlite"
   },
   "dependencies": {
     "@remix-run/cloudflare": "^2.8.1",
     "@remix-run/cloudflare-pages": "^2.8.1",
     "@remix-run/react": "^2.8.1",
+    "drizzle-kit": "^0.20.14",
+    "drizzle-orm": "^0.30.7",
     "isbot": "^4.1.0",
     "miniflare": "^3.20231030.4",
     "react": "^18.2.0",
